@@ -9,6 +9,15 @@ Most recent changes (version wise) are at the top of this file
 All the changes are usually noted in this file when they are checked
 into the cvs repository.
 
+1999-10-12  Ales Hvezda  <ahvezda@geda.seul.org>
+
+	* src/x_fileselect.c: Changed filename_entry to be read-only
+	  when the dialog box is a Component place
+
+	* src/x_fileselect.c: Made the search on files behave the same
+	  as on components (getting feedback when you have reached the
+	  end of the list)
+
 1999-10-11  Ales Hvezda  <ahvezda@geda.seul.org>
 	
 	* src/x_fs.c: Got the component search working
